# University-Major-Application-System---Integrated-with-DeepSeek---React-TypeScript

./: .gitignore  baokao_api.json
baokao_backend/: pyproject.toml
baokao_backend/baokao_backend/: .env  app.py  config.py  models.py
baokao_frontend/: package.json  pnpm-lock.yaml
baokao_frontend/src/app/: comparison-modal.tsx  layout.tsx  major-details.tsx  page.tsx
baokao_frontend/src/app/compare/: page.tsx
baokao_frontend/src/app/components/: Footer.tsx  Navbar.tsx
baokao_frontend/src/app/data/: majorsData.ts
baokao_frontend/src/app/detail/[code]/: page.tsx
python_mysql/: import_major.py  major_list.txt  test_mysql.py
